networking/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: default
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: "20.229.163.6"
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.bkgdsvc.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls
            namespace: default
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.bkgdsvc.com"
      allowedRoutes:
        namespaces:
          from: All
